--- a/FYP/FYP/Views/SuperUser/AddTeacher.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddTeacher.cshtml
@@ -28,18 +28,10 @@
                             <input type="password" name="Password" class="form-control"/><br>
 
                             <label>Contact Number</label>
-                            <input type="number" name="Contact_No" class="form-control" placeholder="Example: 03001234567"><br>
+                            <input type="text" name="Contact_No" class="form-control" placeholder="Example: 03001234567"><br>
 
                             <label>Department</label>
                             <select class="form-control" name="Department_Id" id="dep"></select><br>
-
-                            <label>Status</label>
-                            <center>
-                                <input type="radio" name="Status" value="Active" checked/>
-                                <label>Active</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                                <input type="radio" name="Status" value="Inactive" checked />
-                                <label>Inactive</label>
-                            </center>
 
                             <input type="submit" class="btn btn-primary submit-btn" value="Register">
 
@@ -86,8 +78,13 @@
                 First_Name: "required",
                 Last_Name: "required",
                 Password: "required",
-                Contact_No: "required",
                 Department_Id: "required",
+                Contact_No: {
+                    required: true,
+                    number: true,
+                    minlength: 11,
+                    maxlength: 11,
+                },
                 User_Id: {
                     required: true,
                     remote: {
@@ -103,8 +100,13 @@
                 First_Name: "Please enter First Name !",
                 Last_Name: "Please enter Last Name !",
                 Password: "Please enter a Password !",
-                Contact_No: "Please enter a Contact Number !",
                 Department_Id: "Please select a Department !",
+                Contact_No: {
+                    required: "Please enter a Contact Number !",
+                    number: "It must be a number !",
+                    minlength: "There must be 11 digits in contact no. !",
+                    maxlength: "There must be 11 digits in contact no. !",
+                },
                 User_Id: {
                     required: "Please enter User id !",
                     remote: "User id already exists !"
