--- a/FYP/FYP/Views/SuperUser/EditExamController.cshtml
+++ b/FYP/FYP/Views/SuperUser/EditExamController.cshtml
@@ -18,31 +18,25 @@
                     <div class="panel-heading"><center><b>Edit @Model.User_Id's Account</b></center></div>
                     <div class="panel-body">
 
-                        @using (Html.BeginForm())
-                        {
-                           
-                            @Html.Label("First Name:")<br>   
-                            @Html.TextBoxFor(model => model.First_Name, new { @class = "form-control" })        
-                            @Html.ValidationMessageFor(model => model.First_Name)<br>
-                            
-                            @Html.Label("Last Name:")<br>
-                            @Html.TextBoxFor(model => model.Last_Name, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Last_Name)<br>
-                            
-                            @Html.Label("Password:")<br>                    
-                            @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @type="Password" })                    
-                            @Html.ValidationMessageFor(model => model.Password) <br>                   
-                            
-                            @Html.Label("Contact Number:")<br>
-                            @Html.TextBoxFor(model => model.Contact_No, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Contact_No)<br>
+                        <form action="/SuperUser/EditExamController" method="post">
 
-                            @Html.Label("Role:")<br>
-                            @Html.DropDownListFor(model => model.Role, (IEnumerable<SelectListItem>)ViewBag.RoleList, new { @class = "form-control"})
-                            @Html.ValidationMessageFor(model => model.Role)<br>
+                            <input type="text" name="User_Id" value="@Model.User_Id" hidden /><br>
 
-                            <input type="submit" class="btn btn-primary submit-btn" value="Save Changes">
-                        }
+                            <label>First Name</label>
+                            <input type="text" name="First_Name" value="@Model.First_Name" class="form-control" /><br>
+
+                            <label>Last Name</label>
+                            <input type="text" name="Last_Name" value="@Model.Last_Name" class="form-control" /><br>
+
+                            <label>Password</label>
+                            <input type="password" name="Password" value="@Model.Password" class="form-control" /><br>
+
+                            <label>Contact</label>
+                            <input type="text" name="Contact_No" value="@Model.Contact_No" class="form-control" /><br>
+
+                            <input type="submit" class="btn btn-primary submit-btn" value="Save" />
+                        </form>
+
                     </div>
                 </div>
                 <center><a href="/SuperUser/ManageExamController">Go Back</a></center>
@@ -50,3 +44,35 @@
         </div>
     </div>
 </body>
+
+<script>
+    $(function () {
+        $("form").validate({
+            rules: {
+                First_Name: "required",
+                Last_Name: "required",
+                Password: "required",
+                Contact_No: {
+                    required: "Please enter a Contact Number !",
+                    number: "It must be a number !",
+                    minlength: "There must be 11 digits in contact no. !",
+                    maxlength: "There must be 11 digits in contact no. !",
+                },
+            },
+            messages: {
+                First_Name: "Please enter first name !",
+                Last_Name: "Please enter last name !",
+                Password: "Please enter password !",
+                Contact_No: {
+                    required: "Please enter a Contact Number !",
+                    number: "It must be a number !",
+                    minlength: "There must be 11 digits in contact no. !",
+                    maxlength: "There must be 11 digits in contact no. !",
+                },
+            },
+            submit: function (form) {
+                form.submit();
+            }
+        });
+    });
+</script>
